# VPP-v0.2

./: .clang-format  .gitignore  CMakeLists.txt  VPP.sln  VPP.vcxproj  main.cc  vklua.sln  vklua.vcxproj  vklua.vcxproj.filters
Assert/: texture.frag  texture.vert
Asset/: buffer.vert  gaussian.vert  pushconstant.frag  sampler.frag  skybox.frag  texture.vert
Assets/: basic.frag  basic.vert  instance.frag  instance.vert  outline.shader  pushconstant.vert  skybox.vert  texture.frag  texture.vert
Include/VPP/: Camera.h  Component.h  CubeRenderer.h  GameObject.h  Handle.h  Material.h  Mesh.h  MeshFilter.h  MeshRenderer.h  Scene.h  Shader.h  VPP.h  VPP.hpp  VPP_API.h  VPP_Config.h  Variables.h  application.h  device.h  window.h
LibShader/: LibShader.vcxproj  LibShader.vcxproj.filters
Projects/GlslParser/: GlslParser.vcxproj  GlslParser.vcxproj.filters
Projects/Sample/: Sample.vcxproj  Sample.vcxproj.filters
Projects/Shader/: Shader.vcxproj  Shader.vcxproj.filters
Projects/ShaderReader/: ShaderReader.vcxproj  ShaderReader.vcxproj.filters
Projects/VPP/: VPP.vcxproj  VPP.vcxproj.filters
Projects/VPPDevice/: VPPDevice.vcxproj  VPPDevice.vcxproj.filters
Projects/VPPImage/: VPPImage.vcxproj  VPPImage.vcxproj.filters
Projects/VPPShader/: VPPShader.vcxproj  VPPShader.vcxproj.filters
Projects/VPPWindow/: VPPWindow.vcxproj  VPPWindow.vcxproj.filters
Projects/lualib/: lualib.vcxproj  lualib.vcxproj.filters
Render/: Render.vcxproj  Render.vcxproj.filters
Sample/: Sample.vcxproj  Sample.vcxproj.filters
Shader/: Shader.vcxproj  Shader.vcxproj.filters
Source/: GraphicsDevice.h  Shader.cc  ShaderImpl.h  VPP.cc  VPP_Core.h  application.cc  buffer_impl.cc  buffer_impl.h  config.hpp  console.h  device.cc  device_d.h  image_impl.cc  image_impl.h  renderer_impl.cc  renderer_impl.h  shader_data.h  shader_impl.cc  shader_impl.h  shader_loader.cc  shader_loader.h  swapchain_impl.cc  swapchain_impl.h  window.cc  window_d.h  window_impl.cc  window_impl.h
Source/device/: DeviceBase.cc  DeviceBase.h  GraphicsDevice.cc  GraphicsDevice.h  device.cc  device.h  device_base.cc  graphics_device.cc  graphics_device.h
Source/glsl/: GlslParser.cc  (+1 more)
VPP/: VPP.vcxproj  VPP.vcxproj.filters
Window/: Window.vcxproj  Window.vcxproj.filters
lua_lib/: lua_lib.vcxproj  lua_lib.vcxproj.filters
lua_runtime/: lua_runtime.vcxproj  lua_runtime.vcxproj.filters
script/: config.lua  sample.lua
shader/: shader.vcxproj  shader.vcxproj.filters
source/: buffer.cc  buffer.h  config.cc  config.h  device.cc  device.h  lua_ext.cc  lua_ext.h  main.cc  shader.cc  shader.h  utility.cc  utility.h  window.cc  window.h
src/: CMakeLists.txt  Config.h.in  Core.cc  Core.h  GameObject.cc  GameObject.h  Scene.cc  Scene.h  Test.cc  UUID.cc  UUID.h
vk/: vk.vcxproj  vk.vcxproj.filters
(+53 files in other folders)
